--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
                         <input type="email" placeholder="Enter your email" required>
                     </div>
                     <div>
-                        <select name="" id="">
-                            <option value="">Type of Query</option>
-                            <option value="">customer support</option>
-                            <option value="">raise a ticket</option>
+                        <select name="" id="" placeholder="--select--">
+                            <option value="">Contact</option>
+                            <option value="">Appreciate</option>
+                            <option value="">Feddback</option>
                         </select>
                     </div>
                     <div>
